--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AngularJS + Vite</title>
+    <title>AngularJS + React-like + Vite</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body class="bg-light">
@@ -15,6 +15,6 @@
     <script src="https://unpkg.com/angular-route@1.8.3/angular-route.min.js"></script>
 
     <!-- Entrada del proyecto -->
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
