--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <!-- AngularJS + Router desde CDN -->
     <script src="https://unpkg.com/angular@1.8.3/angular.min.js"></script>
     <script src="https://unpkg.com/angular-route@1.8.3/angular-route.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-utils/0.1.1/angular-ui-utils.min.js"></script>
 
     <!-- Entrada del proyecto -->
     <script type="module" src="./src/main.js"></script>
