--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
     <script src="https://unpkg.com/angular-route@1.8.3/angular-route.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-utils/0.1.1/angular-ui-utils.min.js"></script>
 
+    <!-- Axios -->
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.7.7/dist/axios.min.js"></script>
+
     <!-- Entrada del proyecto -->
     <script type="module" src="./src/main.js"></script>
   </body>
