--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <script src="https://unpkg.com/angular@1.8.3/angular.min.js"></script>
     <script src="https://unpkg.com/angular-route@1.8.3/angular-route.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-utils/0.1.1/angular-ui-utils.min.js"></script>
+    <script src="https://unpkg.com/angular-touch@1.8.3/angular-touch.min.js"></script>
 
     <!-- Axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios@1.7.7/dist/axios.min.js"></script>
